; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/therm/extr_nvd0.c_nvd0_fan_pwm_ctrl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/therm/extr_nvd0.c_nvd0_fan_pwm_ctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_therm = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nouveau_therm*, i32, i32)* @nvd0_fan_pwm_ctrl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nvd0_fan_pwm_ctrl(%struct.nouveau_therm* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.nouveau_therm*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.nouveau_therm* %0, %struct.nouveau_therm** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  %11 = icmp ne i32 %10, 0
  %12 = zext i1 %11 to i64
  %13 = select i1 %11, i32 64, i32 0
  store i32 %13, i32* %8, align 4
  %14 = load %struct.nouveau_therm*, %struct.nouveau_therm** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @pwm_info(%struct.nouveau_therm* %14, i32 %15)
  store i32 %16, i32* %9, align 4
  %17 = load i32, i32* %9, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %3
  %20 = load i32, i32* %9, align 4
  store i32 %20, i32* %4, align 4
  br label %28

21:                                               ; preds = %3
  %22 = load %struct.nouveau_therm*, %struct.nouveau_therm** %5, align 8
  %23 = load i32, i32* %6, align 4
  %24 = mul nsw i32 %23, 4
  %25 = add nsw i32 54800, %24
  %26 = load i32, i32* %8, align 4
  %27 = call i32 @nv_mask(%struct.nouveau_therm* %22, i32 %25, i32 192, i32 %26)
  store i32 0, i32* %4, align 4
  br label %28

28:                                               ; preds = %21, %19
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @pwm_info(%struct.nouveau_therm*, i32) #1

declare dso_local i32 @nv_mask(%struct.nouveau_therm*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
